Mark optimize module as side-effect

--- a/package.json
+++ b/package.json
@@ -1,10 +1,14 @@
 {
   "name": "@mntm/react",
-  "version": "17.0.6",
+  "version": "17.0.7",
   "main": "index.js",
   "module": "index.mjs",
   "source": "index.mjs",
   "jsnext:main": "index.mjs",
+  "sideEffects": [
+    "./optimize.js",
+    "./optimize.mjs"
+  ],
   "author": {
     "name": "Anton Petrov",
     "email": "im@petrov.engineer",
