--- a/package.json
+++ b/package.json
@@ -1,12 +1,11 @@
 {
   "name": "@mntm/react",
-  "version": "17.0.8",
-  "main": "index.js",
-  "module": "index.mjs",
-  "source": "index.mjs",
-  "jsnext:main": "index.mjs",
+  "version": "17.0.9",
+  "main": "./index.js",
+  "module": "./index.mjs",
+  "jsnext:main": "./index.mjs",
+  "exports": "./index.mjs",
   "sideEffects": [
-    "./optimize.js",
     "./optimize.mjs"
   ],
   "author": {
