--- a/package.json
+++ b/package.json
@@ -4,7 +4,29 @@
   "main": "./index.js",
   "module": "./index.mjs",
   "jsnext:main": "./index.mjs",
-  "exports": "./index.mjs",
+  "exports": {
+    ".": [
+      {
+        "require": "./index.js",
+        "import": "./index.mjs"
+      },
+      "./index.mjs"
+    ],
+    "./jsx-dev-runtime": [
+      {
+        "require": "./jsx-dev-runtime.js",
+        "import": "./jsx-dev-runtime.mjs"
+      },
+      "./jsx-dev-runtime.mjs"
+    ],
+    "./jsx-runtime": [
+      {
+        "require": "./jsx-runtime.js",
+        "import": "./jsx-runtime.mjs"
+      },
+      "./jsx-runtime.mjs"
+    ]
+  },
   "sideEffects": [
     "./optimize.mjs"
   ],
